@@ -1,3 +1,12 @@
+2009-03-24  Sanel <karijes@users.sourceforge.net>
+
+	* edelib/IconTheme.h: default_theme_name() added
+	* edelib/IconLoader.h: plain init() used default_theme_name()
+	* src/Window.cpp: DEFAULT_ICON_THEME replaced with default_theme_name()
+	* edelib/IconLoader.h:
+	* src/IconLoader.cpp: let IconLoader tries to directly load icon, then use
+	IconTheme
+
 2009-03-23  Sanel <karijes@users.sourceforge.net>
 
 	* edelib/Window.h: small clarification about XSETTINGS callback;
@@ -7,6 +16,7 @@
 	* edelib/IconLoader.h: some documentation update
 	* src/MimeType.cpp: use new xdgmime's icon lookup feature in fetching icon
 	name, refactored icon fetcher to not use stringtok()
+	* src/MimeType.cpp: mark status as loaded when we have icon name
 
 2009-03-20  Sanel <karijes@users.sourceforge.net>
 
